<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:padding="@dimen/margin_small"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    tools:text="Details of a number">

</TextView>